[gd_scene load_steps=26 format=2]

[ext_resource path="res://prefabs/character.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/camera_follow.gd" type="Script" id=2]
[ext_resource path="res://prefabs/bush.tscn" type="PackedScene" id=3]
[ext_resource path="res://prefabs/grass.tscn" type="PackedScene" id=4]
[ext_resource path="res://prefabs/flowers.tscn" type="PackedScene" id=5]
[ext_resource path="res://prefabs/tree.tscn" type="PackedScene" id=6]
[ext_resource path="res://prefabs/direction_sign.tscn" type="PackedScene" id=7]
[ext_resource path="res://scripts/sign.gd" type="Script" id=8]
[ext_resource path="res://prefabs/text_bubble.tscn" type="PackedScene" id=9]
[ext_resource path="res://prefabs/monologue_area.tscn" type="PackedScene" id=10]
[ext_resource path="res://prefabs/choice_area.tscn" type="PackedScene" id=11]
[ext_resource path="res://prefabs/ending_area.tscn" type="PackedScene" id=12]
[ext_resource path="res://prefabs/bydlo.tscn" type="PackedScene" id=13]
[ext_resource path="res://scripts/BydloEvent.gd" type="Script" id=14]
[ext_resource path="res://prefabs/alcoholic.tscn" type="PackedScene" id=15]
[ext_resource path="res://prefabs/garbage.tscn" type="PackedScene" id=16]
[ext_resource path="res://scripts/AlcoEvent.gd" type="Script" id=17]
[ext_resource path="res://prefabs/mud.tscn" type="PackedScene" id=18]
[ext_resource path="res://jungle-day.mp3" type="AudioStream" id=19]
[ext_resource path="res://scripts/MudEvent.gd" type="Script" id=20]
[ext_resource path="res://scripts/ObhodEvent.gd" type="Script" id=21]
[ext_resource path="res://scripts/EndingEvent.gd" type="Script" id=22]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1, 1, 0.219822 )

[sub_resource type="BoxShape" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.457943, 1, 1 )

[node name="MainScene" type="Spatial" groups=[
"root",
]]

[node name="Character" parent="." groups=[
"Player",
] instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9.86709, 0.5, 0 )
dialog_box_path = NodePath("../TextBubble")

[node name="Camera" type="Camera" parent="."]
current = true
script = ExtResource( 2 )
distance = 3.5

[node name="Scenery" type="Spatial" parent="."]

[node name="Bush" parent="Scenery" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.625318, 0.414454, 0.515456 )

[node name="Bush2" parent="Scenery" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.494112, 0.488235, 1.07897 )

[node name="Bush3" parent="Scenery" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.22132, 0.551131, 1.09358 )

[node name="Bush6" parent="Scenery" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.35376, 0.551131, 0.844327 )

[node name="Bush7" parent="Scenery" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.85046, 0.551131, 1.20327 )

[node name="Bush4" parent="Scenery" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.50312, 0.446505, 0.815371 )

[node name="Bush5" parent="Scenery" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.16277, 0.471975, 0.462769 )

[node name="Grass" parent="Scenery" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.382695, 0.203857 )

[node name="Grass2" parent="Scenery" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2095, 0.382695, 0.0466661 )

[node name="Grass3" parent="Scenery" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.11504, 0.382695, 0.203857 )

[node name="Grass4" parent="Scenery" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.98675, 0.382695, 0.0880632 )

[node name="Grass5" parent="Scenery" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.852002, 0.429967, 0.437988 )

[node name="Grass7" parent="Scenery" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.91727, 0.429967, 0.437988 )

[node name="Grass8" parent="Scenery" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.13195, 0.429967, 0.306266 )

[node name="Grass9" parent="Scenery" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.38417, 0.429967, 0.316151 )

[node name="Grass6" parent="Scenery" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.6918, 0.382695, 0.203857 )

[node name="Grass10" parent="Scenery" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.6918, 0.382695, -0.977659 )

[node name="Grass11" parent="Scenery" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.49659, 0.382695, -0.977659 )

[node name="Grass12" parent="Scenery" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.39351, 0.382695, -0.977659 )

[node name="Grass13" parent="Scenery" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0971814, 0.382695, -0.977659 )

[node name="Grass14" parent="Scenery" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.987136, 0.382695, -0.977659 )

[node name="Grass15" parent="Scenery" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.14905, 0.382695, -0.977659 )

[node name="Grass16" parent="Scenery" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3.13873, 0.382695, -0.977659 )

[node name="Grass17" parent="Scenery" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.26866, 0.382695, -1.13492 )

[node name="Grass18" parent="Scenery" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.07345, 0.382695, -1.13492 )

[node name="Grass19" parent="Scenery" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.97038, 0.382695, -1.13492 )

[node name="Grass20" parent="Scenery" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.674046, 0.382695, -1.13492 )

[node name="Grass21" parent="Scenery" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.410272, 0.382695, -1.13492 )

[node name="Grass22" parent="Scenery" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.57219, 0.382695, -1.13492 )

[node name="Grass23" parent="Scenery" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.56186, 0.382695, -1.13492 )

[node name="Grass24" parent="Scenery" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 33.8686, 0.382695, -1.13492 )

[node name="Grass25" parent="Scenery" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 35.1133, 0.382695, -1.13492 )

[node name="Grass26" parent="Scenery" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 36.0521, 0.382695, -1.13492 )

[node name="Grass27" parent="Scenery" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 35.5518, 0.382695, -1.58028 )

[node name="Grass28" parent="Scenery" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 34.4924, 0.382695, -1.58028 )

[node name="Flowers" parent="Scenery" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.290632, 0.364548, 0.822587 )

[node name="Flowers2" parent="Scenery" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.789721, 0.364548, 0.592877 )

[node name="Flowers3" parent="Scenery" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.29815, 0.364548, 0.659968 )

[node name="Flowers4" parent="Scenery" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.29815, 0.364548, -0.827486 )

[node name="Flowers5" parent="Scenery" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.685117, 0.344449, -1.1086 )

[node name="Flowers6" parent="Scenery" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.538728, 0.344449, -1.31918 )

[node name="Flowers7" parent="Scenery" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.88187, 0.344449, -1.31918 )

[node name="Flowers8" parent="Scenery" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.36377, 0.351682, -0.684865 )

[node name="Tree" parent="Scenery" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.22903, 0.933325, -1.36146 )

[node name="Tree3" parent="Scenery" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.54521, 0.933325, 1.24383 )

[node name="Tree4" parent="Scenery" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.81585, 0.933325, 1.24383 )

[node name="Tree5" parent="Scenery" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0177672, 0.933325, 0.387245 )

[node name="Tree2" parent="Scenery" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.51351, 0.872782, -1.36146 )

[node name="Garbage" parent="Scenery" instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 22.699, 0.19113, -0.389093 )

[node name="Garbage2" parent="Scenery" instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 21.9463, 0.19113, -0.545007 )

[node name="Garbage3" parent="Scenery" instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 23.8612, 0.19113, 0.583564 )

[node name="Mud" parent="Scenery" instance=ExtResource( 18 )]
transform = Transform( 2, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 33.0979, 0, 0 )

[node name="RoadBlock" type="KinematicBody" parent="Scenery"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 26.661, 0, -1 )

[node name="CollisionShape" type="CollisionShape" parent="Scenery/RoadBlock"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.5 )
shape = SubResource( 2 )

[node name="RoadBlock2" type="KinematicBody" parent="Scenery"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 34.2562, 0, -1 )

[node name="CollisionShape" type="CollisionShape" parent="Scenery/RoadBlock2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.5 )
shape = SubResource( 2 )

[node name="Interactive" type="Spatial" parent="."]

[node name="EndingAreaRight" parent="Interactive" instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 53.6303, 5.85084, 0 )

[node name="EndingEvent" type="Area" parent="Interactive"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 49.1456, 0.990373, 0 )
script = ExtResource( 22 )

[node name="CollisionShape" type="CollisionShape" parent="Interactive/EndingEvent"]
shape = SubResource( 3 )

[node name="EndingArea" parent="Interactive" instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -19.197, 0.925444, 0 )
text = "ИСТИННАЯ"

[node name="ChoiceArea" parent="Interactive" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.70912, 1, 0 )
text = "пнуть табличку или оставить в покое? (лкм - хорошее действие, пкм - плохое)"

[node name="Sign" parent="Interactive" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.74352, 0.362174, -0.744604 )

[node name="SignEvent" type="Spatial" parent="Interactive"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.65378, 1, 0 )
script = ExtResource( 8 )

[node name="MonologueArea" parent="Interactive" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -9, 1, 0 )
text = "я - зло"

[node name="MonologueArea4" parent="Interactive" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -13.0199, 1, 0 )
text = "а впрочем, в пизду это приключение"

[node name="MonologueArea5" parent="Interactive" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -16.5655, 1, 0 )
text = "всё, я пошёл домой"

[node name="MonologueArea1" parent="Interactive" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.5891, 1, 0 )
text = "отправился в своё злое приключение"

[node name="MonologueArea2" parent="Interactive" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.51144, 1, 0 )
text = "как же я зол"

[node name="MonologueArea3" parent="Interactive" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.56705, 1, 0 )
text = "мне срочно нужно сделать что-то злое"

[node name="MonologueAreaKickedSign" parent="Interactive" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.84703, 1, 0 )
text = "как же я хорош"

[node name="ObhodEvent" type="Spatial" parent="Interactive"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 32.9232, 1, -0.678041 )
script = ExtResource( 21 )

[node name="MonologueAreaKickedSign3" parent="Interactive/ObhodEvent" instance=ExtResource( 10 )]
text = "ну пиздец"

[node name="MonologueAreaKickedSign2" parent="Interactive" instance=ExtResource( 10 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.81448, 1, 0 )
text = "всмысле плох"

[node name="BydloEvent" type="Area" parent="Interactive"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11.4243, 0.725135, 0 )
script = ExtResource( 14 )

[node name="CollisionShape" type="CollisionShape" parent="Interactive/BydloEvent"]
shape = SubResource( 1 )

[node name="ChoiceAreaZadacha" parent="Interactive/BydloEvent" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.433366, 3.02107, 0 )
question_panel_scene = "res://prefabs/question_panel_twoopts.tscn"
text = "ты упал в яму. в яме пирожок и хуй. что съешь, что в жопу засунешь?"
unlock_after_answer = false

[node name="AlcoEvent" type="Area" parent="Interactive"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 21.4471, 0.725135, 0 )
script = ExtResource( 17 )

[node name="CollisionShape" type="CollisionShape" parent="Interactive/AlcoEvent"]
shape = SubResource( 1 )

[node name="ChoiceAreaKickAlco" parent="Interactive/AlcoEvent" instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.433366, 3.02107, 0 )
text = "ударить алкаша или оставить в покое?"
unlock_after_answer = false

[node name="Bydlo" parent="Interactive" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.7121, 0.527616, 0 )
dialog_box_path = NodePath("../../TextBubbleBydlo")

[node name="Alcoholic" parent="Interactive" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 22.5363, 0.53015, 0 )
dialog_box_path = NodePath("../../TextBubbleAlcoholic")

[node name="MudEvent" type="Spatial" parent="Interactive"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 28.3433, 0.729404, 0 )
script = ExtResource( 20 )

[node name="ChoiceArea2" parent="Interactive/MudEvent" instance=ExtResource( 11 )]
question_panel_scene = "res://prefabs/question_panel_twoopts.tscn"
text = "обойти лужу?"

[node name="TextBubble" parent="." instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.46173, 1.66211, 0 )
follow_path = NodePath("../Character")

[node name="TextBubbleBydlo" parent="." instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.46173, 1.66211, 0 )
follow_path = NodePath("../Interactive/Bydlo")

[node name="TextBubbleAlcoholic" parent="." instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.46173, 1.66211, 0 )
follow_path = NodePath("../Interactive/Alcoholic")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
volume_db = -10.0
autoplay = true

[connection signal="body_entered" from="Interactive/EndingEvent" to="Interactive/EndingEvent" method="_on_EndingEvent_body_entered"]
[connection signal="bad" from="Interactive/ChoiceArea" to="Interactive/SignEvent" method="kick_and_say"]
[connection signal="good" from="Interactive/ChoiceArea" to="Interactive/SignEvent" method="ignore_and_say"]
[connection signal="body_entered" from="Interactive/ObhodEvent/MonologueAreaKickedSign3" to="Interactive/ObhodEvent" method="_on_MonologueAreaKickedSign3_body_entered"]
[connection signal="body_entered" from="Interactive/BydloEvent" to="Interactive/BydloEvent" method="_on_BydloEvent_body_entered"]
[connection signal="first" from="Interactive/BydloEvent/ChoiceAreaZadacha" to="Interactive/BydloEvent" method="_on_ChoiceAreaZadacha_first"]
[connection signal="second" from="Interactive/BydloEvent/ChoiceAreaZadacha" to="Interactive/BydloEvent" method="_on_ChoiceAreaZadacha_second"]
[connection signal="body_entered" from="Interactive/AlcoEvent" to="Interactive/AlcoEvent" method="_on_BydloEvent_body_entered"]
[connection signal="bad" from="Interactive/AlcoEvent/ChoiceAreaKickAlco" to="Interactive/AlcoEvent" method="_on_ChoiceAreaKickAlco_bad"]
[connection signal="good" from="Interactive/AlcoEvent/ChoiceAreaKickAlco" to="Interactive/AlcoEvent" method="_on_ChoiceAreaKickAlco_good"]
[connection signal="first" from="Interactive/MudEvent/ChoiceArea2" to="Interactive/MudEvent" method="_on_ChoiceArea2_first"]
[connection signal="second" from="Interactive/MudEvent/ChoiceArea2" to="Interactive/MudEvent" method="_on_ChoiceArea2_second"]
